<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/activities_background">

    <Button
        android:id="@+id/menu_close"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/ic_close_black_24dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/user_letter"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:background="@drawable/profile_text_background"
        android:gravity="center"
        android:textAlignment="center"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_close" />

    <TextView
        android:id="@+id/user_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="24dp"
        android:textColor="@android:color/white"
        android:textSize="36sp"
        android:textStyle="bold"
        android:fontFamily="@font/varela_round_regular"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_letter" />

    <TextView
        android:id="@+id/user_coins"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/inputHintColor"
        android:textSize="18sp"
        android:fontFamily="@font/roboto_regular"
        app:layout_constraintStart_toStartOf="@+id/user_name"
        app:layout_constraintTop_toBottomOf="@+id/user_name" />


    <LinearLayout
        android:id="@+id/menu_item_quiz"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="48dp"
        android:background="@drawable/menu_item_background"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintEnd_toEndOf="@+id/user_name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/user_coins">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            style="@style/MenuItemImageStyle"
            android:src="@drawable/ic_format_list_bulleted_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/quizzes"
            style="@style/MenuItemTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_leaderboard"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_item_quiz">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            style="@style/MenuItemImageStyle"
            android:src="@drawable/ic_star_black_24dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/leaderboard"
            style="@style/MenuItemTextStyle" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_notification"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_item_leaderboard">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            style="@style/MenuItemImageStyle"
            android:src="@drawable/ic_notifications_black_24dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notifications"
            style="@style/MenuItemTextStyle"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/menu_item_earn_coins"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:padding="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/menu_item_notification">

        <ImageButton
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:src="@drawable/ic_attach_money_black_24dp"
            style="@style/MenuItemImageStyle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/earn_coins"
            style="@style/MenuItemTextStyle"/>
    </LinearLayout>



    <ImageView
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="1px"
        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@color/textLight"
        app:layout_constraintBottom_toTopOf="@+id/menu_item_settings"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />

    <Button
        android:id="@+id/menu_item_settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginBottom="8dp"
        style="@style/MenuButtonStyle"
        android:drawableStart="@drawable/ic_settings_black_24dp"
        android:drawableLeft="@drawable/ic_settings_black_24dp"
        android:text="@string/settings"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:layout_width="1px"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/textLight"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/menu_item_logout"
        app:layout_constraintStart_toEndOf="@+id/menu_item_settings"
        app:layout_constraintTop_toBottomOf="@+id/view3"
        android:scaleType="fitXY"
        android:src="@android:drawable/divider_horizontal_dark" />


    <Button
        android:id="@+id/menu_item_logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:layout_marginBottom="8dp"
        android:text="@string/log_out"
        style="@style/MenuButtonStyle"
        android:drawableStart="@drawable/ic_logout"
        android:drawableLeft="@drawable/ic_logout"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>